trying to fix issue with nabar on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,10 @@ html {
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
 * {
   box-sizing: inherit;
 }
