--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  min-height: calc(100vh - 50px);
+  min-height: calc(100% - 50px);
   margin-top: 50px;
   background-image:url(../assets/img/bee_black.jpg);
   background-position: center;
